--- a/templates/eventos/entrenamientos_list.html
+++ b/templates/eventos/entrenamientos_list.html
@@ -40,12 +40,16 @@
     {% endif %}
 </div>
 
-<div class="bg-brown p-3 text-center mt-4">
-  <p class="text-white mb-1">¡Reserva ya! Reserva tu entrenamiento para poder cumplir con los cupos limitados de cada entrenamiento</p>
+<div class="bg-brown p-3 text-center mt-4 d-flex justify-content-between align-items-center flex-wrap">
+    <a href="{% url 'eventos:entrenamientos_historial' %}" class="btn btn-outline-light mb-2">📚 Historial</a>
+  
+    <p class="text-white mb-2 mx-3 flex-grow-1 text-center">¡Reserva ya! Reserva tu entrenamiento para poder cumplir con los cupos limitados de cada entrenamiento</p>
     
-  {% if current_role == "admin" or current_role == "entrenador" %}
-        <a href="{% url 'eventos:create' %}?tipo=entrenamiento" class="btn btn-brown btn-bordered">Crear Nuevo Entrenamiento</a>
-  {% endif %}
+    {% if current_role == "admin" or current_role == "entrenador" %}
+      <a href="{% url 'eventos:create' %}?tipo=entrenamiento" class="btn btn-brown btn-bordered mb-2">➕ Crear Nuevo</a>
+    {% endif %}
+  </div>
+  
 
 <style>
     .bg-brown { background-color: #6F4E37; }
