--- a/templates/_base.html
+++ b/templates/_base.html
@@ -21,9 +21,7 @@
                     <div class="user-button nav-link text-white" onclick="toggleMenu()">
                         👤 Hola, "{{ current_user.nombre }}"
                     </div>
-                    <div id="dropdownMenu" class="dropdown-menu hidden">
-                        <p class="menu-header">👤 Hola, "{{ current_user.nombre }}"</p>
-                    
+                    <div id="dropdownMenu" class="dropdown-menu hidden">                                      
                         <a href="{% url 'usuarios:detail' current_user.id %}" class="menu-item">🙋‍♂️ Mi perfil</a>
                     
                         {% if current_user.rol == "admin" %}
@@ -31,7 +29,10 @@
                         {% endif %}
                     
                         <a href="{% url 'informes:list' %}" class="menu-item">📈 Estadísticas</a>
-                        <a href="{% url 'pagos:list' %}" class="menu-item">💳 Pagos</a>                
+                        {% if current_user.rol != "entrenador" %}
+                            <a href="{% url 'pagos:list' %}" class="menu-item">💳 Pagos</a>
+                        {% endif %}
+             
                         <a href="{% url 'usuarios:logout' %}" class="menu-item logout">🚪 Cerrar sesión</a>
                     </div>
                 </div>
