:lipstick: arreglado error de navbar

--- a/templates/usuarios/usuario_detail.html
+++ b/templates/usuarios/usuario_detail.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+<link rel="stylesheet" href="{% static 'usuarios/css/usuario_detail.css' %}">
+
 <main class="container mt-5" data-aos="fade-up">
     {% if usuario %}
         <h1 class="text-center text-brown">👤 Información del Usuario</h1>
