--- a/templates/_base.html
+++ b/templates/_base.html
@@ -167,12 +167,15 @@
             margin-top: 2rem;
         }
     </style>
+
+    {% block extra_css %}{% endblock %}
 </head>
 
 <body class="d-flex flex-column min-vh-100 {% if request.resolver_match.url_name == 'login' or request.resolver_match.url_name == 'register' %}login-page{% endif %}">
 
 
-    {% if request.resolver_match.url_name != 'login' and request.resolver_match.url_name != 'register' %}
+    {% if request.resolver_match.url_name != 'login' and request.resolver_match.url_name != 'register' and request.resolver_match.url_name != 'user' and request.resolver_match.url_name != 'create' and request.resolver_match.url_name != 'edit' and request.resolver_match.url_name != 'detail' %}
+
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
