--- a/templates/usuarios/usuario_edit.html
+++ b/templates/usuarios/usuario_edit.html
@@ -3,6 +3,8 @@
 {% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'usuarios/css/usuario_edit.css' %}">
+
 <div class="container mt-5">
   <div class="card shadow-sm p-4 bg-light rounded">
     <h1 class="text-center text-brown">
